--- a/20210426-bootstrap-digipack-index.html
+++ b/20210426-bootstrap-digipack-index.html
@@ -10,573 +10,7 @@
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./CSS/20210423-bootstrap-digipack-template.css">
-
-    <style>
-        body {
-            margin: 0;
-
-        }
-
-        main .container {
-            max-width: 85%;
-
-
-        }
-
-
-        main .carousel .carousel-inner .carousel-item img {
-            height: calc(100vh - 92px);
-        }
-
-
-        main .container .section-1 {
-            padding: 96px 20px;
-        }
-
-        .section-1 {
-            padding-top: 96px;
-        }
-
-        .section-1 .row h1 {
-            font-size: 30px;
-            font-weight: 400;
-        }
-
-        .section-1 .row .col-md-4 {
-            padding: 16px;
-        }
-
-        main .container .section-1 .row p.blue-line {
-            position: relative;
-            margin-bottom: 110px;
-        }
-
-        main .container .section-1 .row p.blue-line::after {
-            content: "";
-            width: 64px;
-            height: 4px;
-            background-color: blue;
-
-
-            position: absolute;
-            top: 100px;
-            left: calc(50% - 32px);
-
-        }
-
-        .section-1 .rounded-circle {
-            width: 80px;
-            height: 80px;
-            background-color: rgb(224, 231, 255);
-            margin-bottom: 20px;
-
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .section-1 svg {
-            width: 40px;
-            height: 40px;
-            color: rgb(99, 102, 241);
-        }
-
-        .section-1 .row h2 {
-            font-size: 18px;
-        }
-
-        .section-1 .row p {
-            font-size: 16px;
-        }
-
-        .section-1 .row button {
-            background-color: rgb(99, 102, 241);
-            width: 120px;
-            height: 45px;
-            font-size: 18px;
-        }
-
-        .section-2 {
-            padding: 96px 20px;
-        }
-
-        .section-2 .pic {
-            padding: 0;
-            padding: 0.5rem;
-        }
-
-
-        main .section-2 .row h1 {
-            font-size: 30px;
-            margin-bottom: 16px;
-            font-weight: 400;
-        }
-
-
-        main .section-3 {
-            padding: 96px 20px;
-        }
-
-        main .section-3 h1 {
-            font-size: 36px;
-            font-weight: 400;
-            width: 100%;
-            text-align: center;
-        }
-
-        main .section-3 p {
-            width: 100%;
-            text-align: center;
-            margin-bottom: 40px;
-        }
-
-        main .section-3 .container {
-            width: 60%;
-            padding: 0;
-        }
-
-        main .section-4 {
-            padding: 96px 20px;
-        }
-
-        main .section-4 .row {
-            padding: 0 20px;
-        }
-
-        main .section-4 .row h1 {
-            font-size: 30px;
-            font-weight: 400;
-        }
-
-
-
-
-        main .container .section-4 .row h1.blue-line {
-            position: relative;
-            /* margin-bottom: 5px; */
-        }
-
-        main .container .section-4 .row h1.blue-line::after {
-            content: "";
-            width: 80px;
-            height: 4px;
-            background-color: blue;
-
-            position: absolute;
-            top: 45px;
-            left: 0;
-        }
-
-        main .section-4 .row .card {
-            background-color: rgb(243, 244, 246);
-            border-style: none;
-            border-radius: 10px;
-        }
-
-
-        main .section-4 .row .card h5 {
-            margin-bottom: 16px;
-        }
-
-
-
-        main .section-4 .row .card p small {
-            font-size: 12px;
-            color: rgb(220, 174, 241);
-        }
-
-        main .section-5 {
-            padding: 96px 20px;
-
-        }
-
-
-        .section-5 .row {
-            padding-bottom: 40px;
-            margin: 0 20% 40px 20%;
-
-        }
-
-        .section-5 .rounded-circle {
-            width: 128px;
-            height: 128px;
-            background-color: rgb(224, 231, 255);
-            /* margin-right: 30px; */
-
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .section-5 svg {
-            width: 64px;
-            height: 64px;
-            color: rgb(99, 102, 241);
-        }
-
-        .section-5 .row h2 {
-            font-size: 18px;
-        }
-
-        .section-5 .row p {
-            font-size: 16px;
-        }
-
-        .section-5 .button {
-            width: 100%;
-        }
-
-        .section-5 button {
-            background-color: rgb(99, 102, 241);
-            width: 120px;
-            height: 45px;
-            font-size: 18px;
-
-        }
-
-        main .section-6 .row {
-            padding: 96px 20px;
-
-        }
-
-        .section-6 img {
-            width: 100%;
-            height: auto;
-            object-fit: cover;
-        }
-
-        .section-6 h2 {
-            font-size: 14px;
-            font-weight: 100;
-        }
-
-        .section-6 h1 {
-            font-size: 30px;
-            font-weight: 400;
-        }
-
-        .section-6 svg.star {
-            width: 16px;
-            height: 16px;
-            color: rgb(99, 102, 241);
-        }
-
-        .section-6 .review span {
-            font-size: 16px;
-            margin-left: 12px;
-            position: relative;
-        }
-
-        .section-6 .review span::after {
-            content: "";
-            width: 1px;
-            height: 28px;
-            background-color: gray;
-            position: absolute;
-            top: 0;
-            left: 85px;
-
-        }
-
-        .section-6 a svg {
-            width: 20px;
-            height: 20px;
-            color: rgb(117, 125, 143);
-        }
-
-        .section-6 .review a .facebook {
-            margin-left: 30px;
-        }
-
-
-        .section-6 .btn-group .btn {
-            width: 28px;
-            height: 28px;
-            margin: 0 4px;
-            border: 2px solid #e5e7eb;
-        }
-
-        .section-6 .btn-group .btn.white {
-            background-color: white;
-        }
-
-        .section-6 .btn-group .btn.black {
-            background-color: black;
-        }
-
-        .section-6 .btn-group .btn.blue {
-            background-color: rgb(99, 102, 241);
-        }
-
-        .section-6 .size .size-select option {
-            display: flex;
-            justify-content: center;
-        }
-
-
-        .section-6 .price span {
-            font-size: 24px;
-        }
-
-        .section-6 .price .btn-group .button button {
-            border-radius: 5px;
-            margin: 0;
-        }
-
-        .section-7 .container {
-            max-width: 95%;
-            padding: 96px 20px;
-        }
-
-        .section-7 .row img {
-            object-fit: cover;
-        }
-
-        .section-7 .row h3 {
-            font-size: 12px;
-            font-weight: 100;
-            margin-bottom: 4px;
-        }
-
-        .section-7 .row h2 {
-            font-size: 18px;
-            font-weight: 400;
-            margin-bottom: 0px;
-        }
-
-
-        .section-8 .position-absolute {
-            z-index: 0;
-            background-color: rgb(209,213,219);
-        }
-
-        .section-8 iframe{
-            filter: grayscale(100%) opacity(0.4) contrast(1.2);
-        }
-
-
-        .section-8 .container {
-            max-width: 75%;
-            padding: 96px 20px;
-        }
-
-
-
-        .section-8 .container .row .col-md-0 {
-            z-index: -1;
-        }
-
-
-        .section-8 .container .row .col-md-12 {
-            z-index: 1;
-            background-color: white;
-            border: 0 solid #e5e7eb;
-            border-radius: 10px;
-        }
-
-        .section-8 h2{
-            font-size: 18px;
-            font-weight: 400;
-        }
-
-        .section-8 label{
-            font-size: 14px;
-            margin-bottom: 0;
-        }
-
-        .section-8 input{
-            border: 1px solid #e5e7eb;
-        }
-
-        .section-8 textarea{
-            resize : none;
-            border: 1px solid #e5e7eb;
-        }
-
-        .section-8 .button{
-            width: 100%;
-        }
-        .section-8 .button button{
-            width: 100%;
-            height: 44px;
-            font-size: 18px;
-            background-color:rgb(99,102,241);
-        }
-
-
-
-
-
-
-
-
-
-
-
-        @media (max-width: 992px) {
-
-            main .container {
-                max-width: 80%;
-                margin: auto;
-
-            }
-
-            main .section-2 .row h1 {
-                font-size: 30px;
-                margin-bottom: 16px;
-            }
-
-            main .section-3 .container {
-                width: 100%;
-            }
-
-            .section-5 .row {
-                margin: 0 0 40px 0;
-            }
-
-            .section-6 .container {
-                max-width: 80%;
-
-            }
-
-            .section-6 img {
-                width: 100%;
-                height: 16rem;
-            }
-
-            .section-7 .container {
-                max-width: 85%;
-
-            }
-
-            .section-8 .container {
-                max-width: 80%;
-        }
-
-
-        }
-
-
-        @media (max-width: 768px) {
-
-
-            main .carousel .carousel-inner .carousel-item img {
-
-                height: unset;
-            }
-
-            main .container {
-                max-width: 100%;
-
-            }
-
-            .section-2 .pic {
-                padding: 0;
-                padding: 4px;
-            }
-
-            main .container .section-2 .row h1 {
-                font-size: 24px;
-                margin-bottom: 12px;
-            }
-
-            main .section-3 h1 {
-                font-size: 30px;
-            }
-
-            .section-5 .row {
-                margin: 0;
-                margin-bottom: 40px;
-            }
-
-            .section-5 .col-12 h2 {
-                text-align: center;
-            }
-
-            .section-5 .col-12 p {
-                text-align: center;
-            }
-
-            .section-5 .col-12 a {
-                display: flex;
-                justify-content: center;
-            }
-
-            .section-5 .rounded-circle {
-                width: 80px;
-                height: 80px;
-
-            }
-
-            .section-5 svg {
-                width: 40px;
-                height: 40px;
-            }
-
-            .section-5 .col-12.col-md-9 {
-                margin-top: 24px;
-            }
-
-            .section-6 .container {
-                max-width: 90%;
-
-            }
-
-
-
-            .section-7 .container {
-                max-width: 95%;
-
-            }
-
-
-
-            .section-8 .container .row .col-md-12 {
-            margin-top: 40px;
-        }
-
-        .section-8 .container {
-                max-width: 80%;
-        }
-
-        }
-
-        @media (max-width: 576px) {
-
-            main .container {
-                max-width: 100%;
-                margin: auto;
-
-            }
-
-            main .container .section-1 .row .col-12 h1 {
-                font-size: 24px;
-                margin-bottom: 12px;
-            }
-
-            main .section-2 .row h1 {
-                font-size: 24px;
-                margin-bottom: 16px;
-            }
-
-            .section-6 .container {
-                max-width: 100%;
-
-            }
-
-            .section-7 .container {
-                max-width: 100%;
-
-            }
-
-            .section-8 .container {
-                max-width: 95%;
-        }
-
-
-        }
-    </style>
-
+    <link rel="stylesheet" href="./CSS/digipack-index.css">
 
 </head>
 
@@ -595,7 +29,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+                <div class="collapse navbar-collapse justify-content-end mx-auto" id="navbarTogglerDemo02">
                     <ul class="navbar-nav mr-0 mt-2 mt-lg-0">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Blog <span class="sr-only">(current)</span></a>
@@ -604,13 +38,16 @@
                             <a class="nav-link" href="#">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">About</a>
+                            <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact</a>
                         </li>
-                        <i class="shop-cart fas fa-shopping-cart"></i>
-                        <i class="account fas fa-user-circle"></i>
+                        <a class="d-flex justify-content-center px-4" href=""> 
+                            <i class="shop-cart fas fa-shopping-cart d-flex justify-content-center align-items-center"></i>
+                            <i class="account fas fa-user-circle d-flex justify-content-center align-items-center"></i>
+                        </a>
+
                     </ul>
 
                 </div>
@@ -1190,7 +627,7 @@
                     <div class="col-md-0 col-lg-6 col-xl-8"></div>
                     <div class="col-md-12 col-lg-6 col-xl-4 d-flex flex-column p-4">
                         <h2 class="mb-1">Feedback</h2>
-                        <p  class="mb-4">Post-ironic portland shabby chic echo park, banjo fashion axe</p>
+                        <p class="mb-4">Post-ironic portland shabby chic echo park, banjo fashion axe</p>
                         <div class="email d-flex flex-column">
                             <label for="email">Email</label>
                             <input type="email" id="email" name="email" class="px-3 py-1 mb-4 rounded">
@@ -1199,7 +636,8 @@
                             <label for="message">Message</label>
                             <textarea name="message" id="message" cols="20" rows="5" class="px-3 py-1 mb-4"></textarea>
                         </div>
-                        <div class="button d-flex justify-content-center"> <button type="button" class="btn btn-primary mt-0">Button</button></div>
+                        <div class="button d-flex justify-content-center"> <button type="button"
+                                class="btn btn-primary mt-0">Button</button></div>
                         <p class="mt-2">Chicharrones blog helvetica normcore iceland tousled brook viral artisan.</p>
                     </div>
                 </div>
