--- a/20210423-bootstrap-practice template.html
+++ b/20210423-bootstrap-practice template.html
@@ -10,260 +10,8 @@
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-    <style>
-        nav .container .navbar {
-            padding: 0 24px;
-            height: 92px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+    <link rel="stylesheet" href="./CSS/20210423-bootstrap-digipack-template.css">
 
-        }
-
-
-        nav .container .navbar .logo img {
-            width: 40%;
-        }
-
-        .navbar-collapse .shop-cart {
-            font-size: 24px;
-            padding-top: 8px;
-            margin-left: 30px;
-
-        }
-
-
-        .navbar-collapse .account {
-            font-size: 30px;
-            padding-top: 5px;
-            margin-left: 30px;
-        }
-
-
-        .navbar-collapse .navbar-nav li {
-            margin-left: 30px;
-
-        }
-
-
-
-        main {
-            width: 100%;
-            height: 1000px;
-            /* min-height: calc(); */
-        }
-
-
-
-        footer {
-            width: 100%;
-        }
-
-        footer .container .footer-up {
-            padding: 96px 20px;
-        }
-
-
-
-        footer .container .footer-up .col-12 a p {
-            font-size: 20px;
-            color: black;
-            text-decoration: none;
-        }
-
-        footer .container .footer-up .col-12 p {
-            font-size: 14px;
-            text-align: center;
-        }
-
-        footer .container .footer-up .col-12 p {
-            text-align: left;
-        }
-
-
-
-        /* footer .container .footer-up .col-md-10{
-            margin-top: 40px;
-        } */
-
-        footer .container .footer-up .col-12 h2 {
-            font-size: 14px;
-            /* margin-bottom: 12px; */
-        }
-
-
-        footer .container .footer-up .col-12 ul {
-            list-style: none;
-            padding: 0;
-        }
-
-
-        footer .container .footer-up .col-12 li {
-            font-size: 16px;
-        }
-
-        footer .container .footer-up .col-12.col-md-6 {
-            padding-left: 80px;
-        }
-
-
-        footer .footer-down .container {
-            max-width: 85%;
-            margin: auto;
-
-        }
-
-
-        footer .footer-down {
-            /* padding: 16px 20px; */
-            background-color: rgb(243, 244, 246);
-        }
-
-        footer .footer-down .row p,
-        footer .footer-down .row a {
-            font-size: 14px;
-            color: rgb(75, 85, 99)
-        }
-
-        footer .footer-down .container .row span a {
-            margin-left: 12px;
-
-
-        }
-
-        footer .footer-down .container .col-12 span {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        @media (max-width: 992px) {
-
-
-            footer .container .footer-up .col-12 {
-                display: flex;
-                justify-content: center;
-            }
-
-
-            footer .container .footer-up .col-12 p {
-                font-size: 14px;
-                text-align: left;
-            }
-
-            footer .container .footer-up .col-12.col-md-6 {
-                margin-top: 50px;
-                padding-left: 0;
-            }
-
-            footer .container .footer-up .col-12.col-md-6 h2 {
-                margin-bottom: 12px;
-            }
-
-            footer .container .footer-up .col-12.col-md-6 ul {
-                margin-bottom: 40px;
-            }
-
-        }
-
-
-        @media (max-width: 768px) {
-
-
-            nav .container .navbar {
-                height: 77px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-            }
-
-            nav .container .navbar .logo img {
-                width: 30%;
-            }
-
-            footer .container .footer-up .col-12 a {
-                margin: auto;
-
-            }
-
-            footer .container .footer-up .col-12 a p {
-                margin: auto;
-
-            }
-
-            footer .container .footer-up .col-12 p {
-                margin: auto;
-                margin-top: 5px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
-            }
-
-            footer .footer-down .container {
-                max-width: 85%;
-                margin: auto;
-
-            }
-
-        }
-
-
-
-
-        @media (max-width: 576px) {
-
-
-            nav .container .navbar {
-                height: 62px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-            }
-
-            nav .container .navbar .navbar-brand {
-                padding: 0;
-            }
-
-            nav .container .navbar .logo img {
-                width: 20%;
-            }
-
-
-            footer .container .footer-up .col-12.col-md-9 {
-                margin-top: 40px;
-            }
-
-            footer .footer-down .container {
-                width: 100%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-            footer .footer-down .container .row {
-                padding: 16px 20px
-            }
-
-
-            footer .footer-down .container p {
-
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-            footer .footer-down .container .col-12 span {
-                width: 100%;
-                margin-top: 8px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-
-        }
-    </style>
 </head>
 
 <body>
@@ -281,7 +29,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+                <div class="collapse navbar-collapse justify-content-end mx-auto" id="navbarTogglerDemo02">
                     <ul class="navbar-nav mr-0 mt-2 mt-lg-0">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Blog <span class="sr-only">(current)</span></a>
@@ -290,13 +38,31 @@
                             <a class="nav-link" href="#">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">About</a>
+                            <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact</a>
                         </li>
-                        <i class="shop-cart fas fa-shopping-cart"></i>
-                        <i class="account fas fa-user-circle"></i>
+                        <a class="d-flex justify-content-center px-0" href="">
+                            <i
+                                class="shop-cart fas fa-shopping-cart d-flex justify-content-center align-items-center"></i>
+
+                            <i class="account fas fa-user-circle d-flex justify-content-center align-items-center"></i>
+                            <!-- <div class="dropdown">
+                                <a class="btn dropdown-toggle p-0" href="#" role="button" id="dropdownMenuLink"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i
+                                        class="account fas fa-user-circle d-flex justify-content-center align-items-center"></i>
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                </div>
+                            </div> -->
+
+                        </a>
+
+
+
                     </ul>
 
                 </div>
