--- a/20210426-bootstrap-digipack-index.html
+++ b/20210426-bootstrap-digipack-index.html
@@ -30,7 +30,7 @@
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-end mx-auto" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav mr-0 mt-2 mt-lg-0">
+                    <ul class="navbar-nav mr-0 mt-2 mt-lg-0 ">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Blog <span class="sr-only">(current)</span></a>
                         </li>
@@ -43,21 +43,39 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact</a>
                         </li>
-                        <a class="d-flex justify-content-center px-4" href=""> 
-                            <i class="shop-cart fas fa-shopping-cart d-flex justify-content-center align-items-center"></i>
+                        <!-- <a class="d-flex justify-content-center px-0" href="">
+                            <i
+                                class="shop-cart fas fa-shopping-cart d-flex justify-content-center align-items-center"></i>
+
                             <i class="account fas fa-user-circle d-flex justify-content-center align-items-center"></i>
-                        </a>
 
+
+                        </a> -->
+
+                        <div class="dropdown d-flex flex-row align-items-center">
+
+                            <a href="">
+                                <i
+                                    class="shop-cart fas fa-shopping-cart d-flex justify-content-center align-items-center"></i></a>
+
+                            <a class="btn dropdown-toggle p-0 d-flex flex-column" href="#" role="button"
+                                id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+                                <i class="account fas fa-user-circle d-flex justify-content-center align-items-center">
+                                </i>
+
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                    <a class="dropdown-item" href="#">Login</a>
+                                </div>
+                            </a>
+                        </div>
                     </ul>
-
                 </div>
-
             </nav>
         </div>
 
 
     </nav>
-
 
     <main>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
