--- a/digipack-login.html
+++ b/digipack-login.html
@@ -17,21 +17,24 @@
 
     <main>
         <div class="image">
-            <div class="row">
-                <div class="col-0 col-lg-6 black">
-                    <div class="word">
-                        <h2>Keep it special</h2>
-                        <p>Capture your personal memory in unique way, anywhere.</p>
+            <div class="row no-gutters">
+                <div class="col-0 col-lg-6">
+                    <div class="black  d-flex justify-content-center align-items-center">
+                        <div class="word">
+                            <h2>Keep it special</h2>
+                            <p class="my-3">Capture your personal memory in unique way, anywhere.</p>
+                        </div>
+                        <div class="links"></div>
                     </div>
-                    <div class="links"></div>
-
 
                 </div>
+
+
                 <div class="col-12 col-lg-6 blue">
-                    <div class="row">
-                        <div class="col-12">
-                            <h2><svg class="w-auto h-12 sm:h-16 inline-flex" xmlns="http://www.w3.org/2000/svg"
-                                    viewBox="0 0 115.8 31.77">
+                    <div class="row d-flex align-content-center  no-gutters">
+                        <div class="col-12 d-flex justify-content-center">
+                            <h2 class="my-2"><svg class="w-auto h-12 sm:h-16 inline-flex"
+                                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 115.8 31.77">
                                     <defs>
                                         <style>
                                             .cls-1 {
@@ -63,30 +66,26 @@
                                     </g>
                                 </svg></h2>
                         </div>
-                        <div class="col-12 d-flex flex-row py-4">
+                        <div class="col-12 d-flex flex-row py-4 justify-content-center">
                             <div class="link rounded-circle d-flex justify-content-center align-items-center">f</div>
-                            <div class="link rounded-circle d-flex justify-content-center align-items-center">G+</div>
+                            <div class="link rounded-circle d-flex justify-content-center align-items-center mx-3">G+
+                            </div>
                             <div class="link rounded-circle d-flex justify-content-center align-items-center">in</div>
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 d-flex justify-content-center">
                             <p>or use email your account</p>
                         </div>
-
-                        <div class="row signin px-sm-4 px-lg-0">
-                            <div class="col-12">
-                                <input type="email" name="email" id="email" placeholder="Email"
-                                    class="block w-full p-4 text-lg rounded-sm bg-black">
-                            </div>
-                            <div class="col-12">
-                                <input class="block w-full p-4 text-lg rounded-sm bg-black" type="password"
-                                    name="password" id="password" placeholder="Password">
-                            </div>
-                            <div class="col-12"><a href="">Forgot your password?</a></div>
-                            <div class="col-12"><button
-                                    class="uppercase block w-full p-4 text-lg rounded-full bg-indigo-500 hover:bg-indigo-600 focus:outline-none">sign
-                                    in</button></div>
-                            <div class="col-12"></div>
+                        <div class="col-12 email d-flex justify-content-center">
+                            <input class="p-3" type="email" name="email" id="email" placeholder="Email">
                         </div>
+                        <div class="col-12 password d-flex justify-content-center">
+                            <input class="p-3" type="password" name="password" id="password" placeholder="Password">
+                        </div>
+                        <div class="col-12"><a href="">Forgot your password?</a></div>
+                        <div class="col-12 signin d-flex justify-content-center"><button class="p-3">SIGN IN</button>
+                        </div>
+                        <div class="col-12 hidden"></div>
+
 
                     </div>
                 </div>
