--- a/digipack-login.html
+++ b/digipack-login.html
@@ -109,7 +109,8 @@
                                                 placeholder="Password">
                                         </div>
                                         <div class="col-12 text-right"><a href="">Forgot your password?</a></div>
-                                        <div class="col-12 signin d-flex justify-content-center"><button class="p-3">SIGN IN</button>
+                                        <div class="col-12 signin d-flex justify-content-center"><button
+                                                class="p-3">SIGN IN</button>
                                         </div>
                                     </div>
                                 </div>
