--- a/20210423-bootstrap-digipack-shopping cart template.html
+++ b/20210423-bootstrap-digipack-shopping cart template.html
@@ -80,41 +80,65 @@
     </nav>
 
     <main>
-        <div class="container mx-auto no-gutters">
+        <div class="container mx-auto p-0">
             <div class="shopcart py-5">
-                <div class="cart p-5">
-                    <div class="row">
+                <div class="cart mx-auto">
+                    <div class="row no-gutters">
                         <div class="col-12">
-                            <h1>購物車</h1>
+                            <h1 class="m-0">購物車</h1>
                         </div>
-                        <div class="col-12">
-                            <div class="steps">
-                                <div class="step active line">
-                                    <div class="round">1</div>
+                        <div class="col-12 py-4">
+                            <div class="steps d-flex flex-row justify-content-around align-items-start">
+                                <div class="step active line text-center">
+                                    <div class="round mb-2">1</div>
                                     <div class="text">確認購物車</div>
                                 </div>
-                                <div class="step line">
-                                    <div class="round">2</div>
+                                <div class="step line text-center">
+                                    <div class="round mb-2">2</div>
                                     <div class="text">付款與運送方式</div>
                                 </div>
-                                <div class="step line">
-                                    <div class="round">3</div>
+                                <div class="step line text-center">
+                                    <div class="round mb-2">3</div>
                                     <div class="text">填寫資料</div>
                                 </div>
-                                <div class="step">
-                                    <div class="round">4</div>
+                                <div class="step text-center">
+                                    <div class="round mb-2">4</div>
                                     <div class="text">完成訂購</div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <hr class="featurette-divider">
-                    <div class="row"></div>
+                    <div class="row no-gutters"></div>
                     <hr class="featurette-divider">
-                    <div class="row"></div>
+                    <div class="row no-gutters d-flex flex-column align-content-end">
+                        <div class="col-3 d-flex justify-content-between">
+                            <span class="text-muted">數量:</span>
+                            <span>3</span>
+                        </div>
+                        <div class="col-3 d-flex justify-content-between">
+                            <span class="text-muted">小計:</span>
+                            <span>$24.90</span>
+                        </div>
+                        <div class="col-3 d-flex justify-content-between">
+                            <span class="text-muted">運費:</span>
+                            <span>$24.90</span>
+                        </div>
+                        <div class="col-3 d-flex justify-content-between">
+                            <span class="text-muted">總計:</span>
+                            <span>$24.90</span>
+                        </div>
+
+                    </div>
+                    <hr class="featurette-divider">
+                    <div class="row no-gutters">
+                        <div class="col-12 d-flex justify-content-between">
+                            <p class="d-flex align-items-center m-0"><i class="fa fa-arrow-left text-sm pr-2"></i>返回購物</p>
+                            <a href=""><button type="button" class="btn btn-primary px-5 py-3" >下一步</button></a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
     </main>
 
     <footer>
